tests/new_bad_allocator_readonly.stderr
tests/new_bad_allocator_readonly.sl:5:36: error: SL2004: type mismatch
